--- a/assest/css/style.scss
+++ b/assest/css/style.scss
@@ -62,23 +62,501 @@
     align-items: center;
    }
  
-    h1{
-    
-       display: flex;
-       align-items: center;
-       justify-content: center;
-       border-radius: 30px;
-    
-   
-  
-        
 
-    }
 }
 .information{
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ 
+
+ 
+    h2{
+        text-align: center;
+        margin-top: 30px;
+    }
+
+    .smallplace{
+      
+        display: inline-flex;
+        color: #a5a5a5;
+        border: 1px solid rgb(208, 208, 211);
+        padding: 15px 20px 10px;
+        border-radius: 30px;
+        gap: 5px;
+    
+        .greendot{
+            color: rgb(40, 247, 40);
+       
+   
+        
+        }
+  
+    
+ 
+        
+     
+   
+   
+    }
+ 
     img{
-        width: 307px;
-        height: 307px;
+        width: 370px;
+        height: 370px;
         border-radius: 10px;
     }
-}
+   
+      
+     
+    
+}   
+       
+
+.information{
+ 
+ .arrow{
+    gap: 50px;
+    display:-webkit-box;
+    display: flex;
+    flex-wrap: wrap;
+    color: #6d6b6b;
+  
+
+ .miniarrow{
+    display: flex;
+    flex-wrap: wrap;
+ }
+   
+   
+ }   
+ }
+   .kane{
+    text-align: center;
+    border: 1px solid rgba(0, 0, 0, .05);
+   }
+
+    .about{
+        button{
+            width: 180px;
+            height: 60px;
+            color: white;
+            background-color: #000;
+        }
+        h1{
+            font-size: 55px;
+        }
+      
+    }
+    .icons{
+       
+        font-size: 20px;
+       
+      
+       
+        padding: 10px 12px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      
+     gap: 30px;
+    
+        
+      i{
+        padding: 10px 12px;
+        border: 1px solid rgba(0, 0, 0, .05); 
+
+      }
+     
+    }
+    
+   
+   
+        .smallplace{
+            text-align: center;
+
+    }
+    .textbox{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+          h5{
+            color: #b4b3b3;
+          }  
+          h2{
+            font-size: 45px;
+          }
+    }
+    .icons-about{
+        .row{
+            gap: 25px;
+
+        }
+        .col-4{
+        width:350px;
+        height: 350px;
+
+        }
+    
+
+   .row{
+    padding: 10px;
+   }
+   
+        .col-4{
+            background-color: #E6EAEE;
+           margin: 0px 0px 30px;
+           padding:  60px 40px ;
+           border-radius: 10px;
+   
+        }
+        i{
+            font-size: 50px;
+            color: #6d6b6b;
+        }
+    }
+    .mycard{
+        display: flex;
+        align-items: center;
+        justify-self: center;
+        flex-direction: column;
+         
+        h6{
+            color: #a5a5a5;
+        }
+        h2{
+            font-size: 40px ;
+    
+        }
+    }
+    .color{
+        background-color: #E6EAEE;
+    }
+    .bigcard{
+      
+        padding-top: 100px;
+    
+        .iconandnote{
+            display: flex;
+            align-items: center;
+            justify-self: center;
+            gap: 10px;
+            padding:30px;
+            border: 1px solid rgba(0, 0, 0, .05); 
+            .notejr{
+             p{
+                font-size: 15px;
+             }
+
+            }
+            .iconjr{ 
+                display: flex;
+                align-items: center;
+                justify-self: center;
+                
+              background-color: #ffffff;
+              padding-left: 15px;
+              padding: 0px 0px 0px 10px;
+             width: 50px;
+             height: 50px;
+                i{
+                    color: transparent;
+                    -webkit-text-stroke: 1px #000;
+                  font-size: 25px;
+                }
+            }
+        }
+    }
+    .notemain{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        h2{
+            font-size: 40px;
+        }
+        h5{
+            font-size: 15px;
+            color: #a5a5a5;
+        }
+    }
+    .ulandfoto{
+        .row{
+      
+        }
+        .col-4{
+            font-size: 100px;
+      
+
+        }
+
+           
+           .reading{
+            padding: 0px  25px 20px;
+            border: 2px solid rgba(0, 0, 0, .05);
+            width: 330px;
+            border-radius: 5px;
+           
+       
+            
+           }
+            h6{
+                color: #777676;
+            }
+          img{
+            width: 330px;
+            height: 330px;
+          }
+        
+        .lifoto{
+        ul{
+            display: flex;
+            align-items: center;
+            list-style-type: none;
+           gap: 20px;
+           a{
+            text-decoration: none;
+            color: #777676;
+           }
+        }
+        }
+    }
+    .pandh{
+        h2{
+            font-size: 40px;
+        }
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column
+     
+    }
+    .twocard{
+     
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        .col-6{
+            border: 2px solid rgba(80, 76, 76, 0.05); 
+            border-radius: 10px;
+            img{
+                width:65px;
+                height:65px ;
+                border-radius: 50px;
+                text-decoration: 10px;
+            }
+        }
+        .slashicon{
+            font-size: 20px;
+            gap: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .icon1{
+                background-color: #000;
+                color: white;
+                width: 50px;
+                height: 50px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50px;
+
+            }
+            .icon2{
+                background-color: #000;
+                color: white;
+                width: 50px;
+                height: 50px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50px;
+
+            }
+        
+      
+        }
+    }
+    .twohuman{
+        .row{
+      
+            gap: 20px;
+            .col-6{
+                width: 480px;
+                height: 230px;
+
+            }
+        }
+        background-color: #E6EAEE;
+        height: 700px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+       
+
+    }
+
+    .card22{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        h6{
+            color: #777676;
+        }
+        h2{
+            font-size: 40px;
+        }
+    }
+    .therecard{
+        .row{
+            gap: 20px;
+            .col-4{
+                height: 450px;
+
+                .button{
+                    padding-left: 20px;
+                    button{
+                        width: 120px;
+                        height: 50px;
+                        color: #ffffff;
+                        background-color: #000;
+           
+
+                    }
+                 
+                }
+                width: 350px;
+             
+                background-color: #E6EAEE;
+                border-radius: 10px;
+              .border{
+                border: 1px solid;
+                border-radius: 10px;
+              }
+              .arrowand{
+             
+                display: flex;
+                align-items: center;
+                padding-left: 20px;
+                i{
+                    color: #777676;
+                }
+
+              }
+            }
+
+            
+            .dollar{
+                display: flex;
+                align-items: center;
+            }
+        }
+    }
+    .blog{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        h2{
+            font-size: 45px;
+        }
+        h6{
+            color: #777676;
+        }
+    }
+    .umumi{
+       .el-img{
+        img{
+            width: 350px;
+            height: 210px;
+        }
+      
+       }
+       .el-about{
+       width: 350px;
+       height: 300px;
+       background-color: #E6EAEE;
+       padding: 25px 25px 25px 25px;
+       gap: 30px;
+       .button-img{
+        button{
+            width: 140px;
+            height: 60px;
+            color: #ffffff;
+            background-color: #000;
+        }
+       }
+    }
+
+
+
+    }
+    .input-one{
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        h6{
+            color: #777676;
+
+        }
+        h2{
+            font-size: 40px;
+
+        }
+    }
+    .input-col{
+       .row{
+        gap: 40px;
+       }
+        .col-7{
+            .button-inp{
+                button{
+                   width:210px ;
+                   height:62px ;
+                    background-color: #000;
+                    color: #ffffff;
+                }
+            }
+            input{
+                border-radius: 10px;
+                width: 620px;
+                height: 120px;
+
+            }
+        }
+        .col-5{
+            background-color: #E6EAEE;
+            width: 350px;
+            height: 400px;
+            padding-left: 40px;
+            border-radius: 10px;
+            padding-top: 30px;
+            i{
+                color: transparent;
+                -webkit-text-stroke: 1px #000;
+
+            }
+            h6{
+                font-size:15px ;
+            }
+        }
+
+    }
+    .there-inp{
+        display: flex;
+        gap: 20px;
+        .inp-1{
+            input{
+           width: 292px;
+           height: 60px;
+           border-radius: 10px;
+            }
+        }
+    }
